<resources>
    <string name="app_name">Mango</string>

    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_confirm">Подтвердить</string>
    <string name="action_sign_in_short">Во</string>
    <string name="name_register">Регистрация</string>
    <string name="action_register">Зарегистрироваться</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="number_mock">"+79219999999"</string>

    <string name="prompt_number">Номер телефона</string>
    <string name="prompt_sms">Смс код</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_username">Имя пользователя</string>

    <string name="unexpected_error">Непредвиденная ошибка</string>
</resources>