<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_selector"
            android:drawableStart="@drawable/ic_phone_24"
            android:drawablePadding="20dp"
            android:hint="@string/prompt_number"
            android:inputType="phone"
            android:padding="20dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_selector"
            android:drawableStart="@drawable/ic_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/prompt_name"
            android:padding="20dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_selector"
            android:drawableStart="@drawable/ic_username_24"
            android:drawablePadding="20dp"
            android:hint="@string/prompt_username"
            android:padding="20dp"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/purple_500"
            android:layout_marginHorizontal="30dp"
            android:text="@string/action_register"
            android:textSize="20sp" />

    </LinearLayout>
</FrameLayout>