<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ui.AuthActivity">

    <com.hbb20.CountryCodePicker
        android:id="@+id/country_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/num_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_number"
        android:layout_marginEnd="24dp"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@id/country_picker"
        app:layout_constraintStart_toEndOf="@id/country_picker"
        app:layout_constraintTop_toTopOf="@id/country_picker" />

    <EditText
        android:id="@+id/sms_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_sms"
        android:layout_marginEnd="24dp"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/num_input"
        app:layout_constraintTop_toBottomOf="@id/num_input" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="@id/num_input"
        app:layout_constraintTop_toBottomOf="@id/sms_input"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:enabled="true"
        android:text="@string/name_register"
        app:layout_constraintStart_toStartOf="@id/country_picker"
        app:layout_constraintTop_toBottomOf="@id/sms_input"/>

    <ProgressBar
        android:id="@+id/load_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>